aligning on format for explanatory md files

--- a/ornl.ipynb
+++ b/ornl.ipynb
@@ -6,7 +6,9 @@
    "source": [
     "# Demo notebook for accessing Harmonized Aboveground Global Biomass data on Azure\n",
     "\n",
-    "This notebook provides an example of accessing Harmonized Aboveground Global Biomass data from blob storage on Azure, including (1) looking at the directory where data is stored, (2) load the cloud optimized geotiff for a aprticular year, and (3) doing some simple processing and plotting of the data.\n",
+    "This notebook provides an example of accessing Harmonized Aboveground Global Biomass (HAGB) data from blob storage on Azure, including (1) looking at the directory where data is stored, (2) load the cloud optimized geotiff for a aprticular year, and (3) doing some simple processing and plotting of the data.\n",
+    "\n",
+    "HAGB data are stored in the XYZ data center, so this notebook will run most efficiently on Azure compute located in XYZ. We recommend that substantial computation depending on MODIS data also be situated in XYZ. If you are using MTBS data for environmental science applications, consider applying for an AI for Earth grant to support your compute requirements.\n",
     "\n",
     "The Harmonized Aboveground Global Biomass is ... "
    ]
