--- a/hagb.ipynb
+++ b/hagb.ipynb
@@ -10,7 +10,7 @@
     "\n",
     "HAGB data are stored in the XYZ data center, so this notebook will run most efficiently on Azure compute located in XYZ. We recommend that substantial computation depending on MODIS data also be situated in XYZ. If you are using MTBS data for environmental science applications, consider applying for an AI for Earth grant to support your compute requirements.\n",
     "\n",
-    "The Harmonized Aboveground Global Biomass is ... "
+    "The HAGB dataset provides temporally consistent and harmonized global maps of aboveground and belowground biomass carbon density for the year 2010 at a 300-m spatial resolution. The aboveground biomass map integrates land-cover specific, remotely sensed maps of woody, grassland, cropland, and tundra biomass. Input maps were amassed from the published literature and, where necessary, updated to cover the focal extent or time period. The belowground biomass map similarly integrates matching maps derived from each aboveground biomass map and land-cover specific empirical models. Aboveground and belowground maps were then integrated separately using ancillary maps of percent tree cover and landcover and a rule-based decision tree. Maps reporting the accumulated uncertainty of pixel-level estimates are also provided."
    ]
   },
   {
